tulip-cli-dev: removed TULIP_JAVA_OPTIONS